[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/Environment/space_environment_meshlib.tres" type="MeshLibrary" id=1]
[ext_resource path="res://assets/Astronaut/AstronautSkin.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/Camera3D/ThirdPersonCamera.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/Player3D/Player3D.gd" type="Script" id=4]
[ext_resource path="res://PhysicsInterpolation/PhysicsInterpolation.gd" type="Script" id=5]

[sub_resource type="CapsuleShape" id=1]
radius = 0.35
height = 0.5

[sub_resource type="CylinderShape" id=2]
height = 0.618427
radius = 1.38531

[node name="PhysicsInterpolation" type="Spatial"]
script = ExtResource( 5 )

[node name="Player3D" type="KinematicBody" parent="." groups=["player"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.516972, 0, 1.97744 )
collision_layer = 2
script = ExtResource( 4 )
acceleration = 8.0
rotation_speed = 20.0
camera_path = NodePath("ThirdPersonCamera")

[node name="ThirdPersonCamera" parent="Player3D" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.618, 0 )
joystick_sensitivity = 3.766

[node name="CollisionShape" type="CollisionShape" parent="Player3D"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.6, 0 )
shape = SubResource( 1 )

[node name="AstronautSkin" parent="Player3D" instance=ExtResource( 2 )]
transform = Transform( -0.5, 0, -4.37114e-08, 0, 0.5, 0, 4.37114e-08, 0, -0.5, 0, 0, 0 )

[node name="AttackHitBox" type="Area" parent="Player3D"]
monitoring = false

[node name="CollisionShape" type="CollisionShape" parent="Player3D/AttackHitBox"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.945156, 0 )
shape = SubResource( 2 )
disabled = true

[node name="CameraController" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
player_path = NodePath("../Player3D")

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.707107, 0.5, 0.5, 0, -0.707107, 0.707107, 0.707107, -0.5, -0.5, 0, 10, 0 )
shadow_enabled = true
shadow_bias = 0.05
directional_shadow_blend_splits = true
directional_shadow_normal_bias = 0.2
directional_shadow_max_distance = 50.0

[node name="LevelGridMap" type="GridMap" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.75, 0, 0.75 )
mesh_library = ExtResource( 1 )
cell_center_y = false
collision_mask = 0
data = {
"cells": PoolIntArray( -65536, 0, 12, -65535, 0, 12, -65534, 0, 12, -65533, 0, 12, -65532, 0, 13, -4, 0, 655377, -3, 0, 1048582, -2, 0, 12, -1, 0, 12, 65533, 1, 29, 65534, 1, 29, -65536, 1, 12, -65535, 1, 12, -65534, 1, 12, -65533, 1, 12, -65532, 1, 13, -4, 1, 655377, -3, 1, 6, -2, 1, 12, -1, 1, 12, 3, 2, 1441792, 65533, 2, 29, 65534, 2, 29, 65535, 2, 655361, -65536, 2, 12, -65535, 2, 12, -65534, 2, 12, -65533, 2, 655366, -65532, 2, 13, -4, 2, 655373, -3, 2, 12, -2, 2, 12, -1, 2, 12, -65536, 3, 1441805, -65535, 3, 1441805, -65534, 3, 1441805, -65533, 3, 1441805, -65532, 3, 11, -4, 3, 1441803, -3, 3, 1441805, -2, 3, 1441805, -1, 3, 1441805, -65536, 65531, 1048589, -65535, 65531, 1048589, -65534, 65531, 1048589, -65533, 65531, 1048589, -65532, 65531, 1048587, -4, 65531, 655371, -3, 65531, 1048589, -2, 65531, 1048589, -1, 65531, 1048589, 0, 65532, 29, 1, 65532, 29, 2, 65532, 29, 3, 65532, 29, 65534, 65532, 29, 65535, 65532, 29, 65536, 65532, 29, 131070, 65532, 29, 131071, 65532, 29, -65536, 65532, 12, -65535, 65532, 6, -65534, 65532, 12, -65533, 65532, 12, -65532, 65532, 13, -4, 65532, 655373, -3, 65532, 12, -2, 65532, 12, -1, 65532, 12, 0, 65533, 29, 1, 65533, 29, 2, 65533, 29, 3, 65533, 29, 65533, 65533, 1048577, 65534, 65533, 29, 65535, 65533, 29, 65536, 65533, 29, 131070, 65533, 29, 131071, 65533, 29, -65536, 65533, 12, -65535, 65533, 12, -65534, 65533, 12, -65533, 65533, 12, -65532, 65533, 13, -4, 65533, 655373, -3, 65533, 12, -2, 65533, 12, -1, 65533, 12, 2, 65534, 29, 3, 65534, 29, -65536, 65534, 12, -65535, 65534, 6, -65534, 65534, 12, -65533, 65534, 12, -65532, 65534, 13, -4, 65534, 655373, -3, 65534, 12, -2, 65534, 12, -1, 65534, 12, 2, 65535, 29, 3, 65535, 29, -65536, 65535, 12, -65535, 65535, 12, -65534, 65535, 12, -65533, 65535, 12, -65532, 65535, 13, -4, 65535, 655373, -3, 65535, 12, -2, 65535, 12, -1, 65535, 12 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 1, 0 )
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
light_mask = 0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = 17.0
margin_right = 341.0
margin_bottom = -891.0
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/PanelContainer"]
margin_right = 317.0
margin_bottom = 172.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PanelContainer/MarginContainer"]
light_mask = 0
margin_left = 20.0
margin_top = 20.0
margin_right = 297.0
margin_bottom = 152.0

[node name="PhysicsLabel" type="Label" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_right = 277.0
margin_bottom = 34.0
text = "Physics FPS (20)"

[node name="HSlider" type="HSlider" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 54.0
margin_right = 277.0
margin_bottom = 70.0
focus_mode = 0
min_value = 5.0
max_value = 60.0
value = 20.0

[node name="InterpolationToggle" type="CheckBox" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
light_mask = 0
margin_top = 90.0
margin_right = 277.0
margin_bottom = 132.0
focus_mode = 0
pressed = true
enabled_focus_mode = 0
text = "Physics Interpolation"
